// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-snippet> Component Snippet display: block 1`] = `
<bolt-code-snippet display="block"
                   lang="html"
                   syntax="light"
>
  <pre class="c-bolt-code-snippet c-bolt-code-snippet-syntax--light language-html">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block c-bolt-code-snippet-syntax--light language-html nohighlight"
          is="shadow-root"
    >
      some snippet code
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-snippet> Component Snippet display: inline 1`] = `
<bolt-code-snippet display="inline"
                   lang="html"
                   syntax="light"
>
  <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--inline c-bolt-code-snippet-syntax--light language-html nohighlight"
        is="shadow-root"
  >
    some snippet code
  </code>
</bolt-code-snippet>
`;

exports[`<bolt-snippet> Component Snippet language: css 1`] = `
<bolt-code-snippet display="block"
                   lang="css"
                   syntax="light"
>
  <pre class="c-bolt-code-snippet c-bolt-code-snippet-syntax--light language-css">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block c-bolt-code-snippet-syntax--light language-css nohighlight"
          is="shadow-root"
    >
      This is css
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-snippet> Component Snippet language: html 1`] = `
<bolt-code-snippet display="block"
                   lang="html"
                   syntax="light"
>
  <pre class="c-bolt-code-snippet c-bolt-code-snippet-syntax--light language-html">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block c-bolt-code-snippet-syntax--light language-html nohighlight"
          is="shadow-root"
    >
      This is html
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-snippet> Component Snippet language: js 1`] = `
<bolt-code-snippet display="block"
                   lang="js"
                   syntax="light"
>
  <pre class="c-bolt-code-snippet c-bolt-code-snippet-syntax--light language-js">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block c-bolt-code-snippet-syntax--light language-js nohighlight"
          is="shadow-root"
    >
      This is js
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-snippet> Component Snippet language: scss 1`] = `
<bolt-code-snippet display="block"
                   lang="scss"
                   syntax="light"
>
  <pre class="c-bolt-code-snippet c-bolt-code-snippet-syntax--light language-scss">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block c-bolt-code-snippet-syntax--light language-scss nohighlight"
          is="shadow-root"
    >
      This is scss
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-snippet> Component Snippet language: twig 1`] = `
<bolt-code-snippet display="block"
                   lang="twig"
                   syntax="light"
>
  <pre class="c-bolt-code-snippet c-bolt-code-snippet-syntax--light language-twig">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block c-bolt-code-snippet-syntax--light language-twig nohighlight"
          is="shadow-root"
    >
      This is twig
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-snippet> Component Snippet syntax: dark 1`] = `
<bolt-code-snippet display="block"
                   lang="html"
                   syntax="dark"
>
  <pre class="c-bolt-code-snippet c-bolt-code-snippet-syntax--dark language-html">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block c-bolt-code-snippet-syntax--dark language-html nohighlight"
          is="shadow-root"
    >
      some snippet code
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-snippet> Component Snippet syntax: light 1`] = `
<bolt-code-snippet display="block"
                   lang="html"
                   syntax="light"
>
  <pre class="c-bolt-code-snippet c-bolt-code-snippet-syntax--light language-html">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block c-bolt-code-snippet-syntax--light language-html nohighlight"
          is="shadow-root"
    >
      some snippet code
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-snippet> Component Snippet syntax: none 1`] = `
<bolt-code-snippet display="block"
                   lang="html"
                   syntax="none"
>
  <pre class="c-bolt-code-snippet c-bolt-code-snippet-syntax--none language-html">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block c-bolt-code-snippet-syntax--none language-html nohighlight"
          is="shadow-root"
    >
      some snippet code
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-snippet> Component basic usage 1`] = `
<bolt-code-snippet display="block"
                   lang="html"
                   syntax="light"
>
  <pre class="c-bolt-code-snippet c-bolt-code-snippet-syntax--light language-html">
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block c-bolt-code-snippet-syntax--light language-html nohighlight"
          is="shadow-root"
    >
      some snippet code
    </code>
  </pre>
</bolt-code-snippet>
`;

exports[`<bolt-snippet> Component basic usage with attributes 1`] = `
<bolt-code-snippet display="block"
                   lang="html"
                   syntax="light"
>
  <pre data-foo="baz"
       class="c-bolt-code-snippet c-bolt-code-snippet-syntax--light language-html"
  >
    <code class="c-bolt-code-snippet__code c-bolt-code-snippet__code--block c-bolt-code-snippet-syntax--light language-html nohighlight"
          is="shadow-root"
    >
      some snippet code
    </code>
  </pre>
</bolt-code-snippet>
`;
